# multiverse

./: .gitignore  README.md  pyproject.toml
multiverse/: list_utils.py  taxonomy.py  vsm.py  vsm_utils.py
tests/: test_multiverse.py
