[tool.poetry]
name = "multiverse"
version = "0.1.0"
description = ""
authors = ["Kanishka Misra <menogetusername@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.9.6"
notebook = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
